--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,22 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-button>Default</ion-button> <ion-button [disabled]="true">Disabled</ion-button>
+  <ion-button size="small">Small</ion-button>
+<ion-button size="default">Default</ion-button>
+<ion-button size="large">Large</ion-button>
+
+<ion-button>Default</ion-button>
+<ion-button color="primary">Primary</ion-button>
+<ion-button color="secondary">Secondary</ion-button>
+<ion-button color="tertiary">Tertiary</ion-button>
+<ion-button color="success">Success</ion-button>
+<ion-button color="warning">Warning</ion-button>
+<ion-button color="danger">Danger</ion-button>
+<ion-button color="light">Light</ion-button>
+<ion-button color="medium">Medium</ion-button>
+<ion-button color="dark">Dark</ion-button>
+
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
